--- a/plugin.video.wabc/resources/language/resource.language.en_gb/strings.po
+++ b/plugin.video.wabc/resources/language/resource.language.en_gb/strings.po
@@ -4,8 +4,8 @@
 # Addon Provider: t1m
 msgid ""
 msgstr ""
-"Project-Id-Version: XBMC Addons\n"
-"Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
+"Project-Id-Version: \n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
@@ -13,11 +13,11 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: am\n"
+"Language: en_GB\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 
 msgctxt "#30001"
-msgid "Video Not Available At This Time"
+msgid "Video not available at this time"
 msgstr ""
 
